# iSpy-FRC

./: .gitignore  install-deploy.sh  install-dev.sh  install.sh  provision.sh  pyproject.toml  readme.md  todo.txt
.github/workflows/: build-image.yml
Config/: config.json
Image/: build-image.sh  first-boot.service  first-boot.sh  provision.sh
VisionCore/: VisionCore.py
VisionCore/boot/: boot.py  setup_service.py  watchdog.py
VisionCore/config/: AutoOpt.py  VisionCoreConfig.py
VisionCore/core/: game_loop.py
VisionCore/dataset/: dataset.py
VisionCore/examples/: example_config.json  example_usage.py
VisionCore/plugins/trackers/: ObjectTracker.py  PathPlanner.py
VisionCore/plugins/utilities/: HealthReporter.py  NetworkHandler.py
VisionCore/plugins/vision/: ObjectDetectionCamera.py
VisionCore/utilities/: MultipleCameraHandler.py
VisionCore/utilities/laptop/: AllInOneConvert.py
VisionCore/validations/: model_validator.py  unit_tests.py  validate_system.py
VisionCore/vision/: Camera.py  ModelInspector.py  Object.py  ObjectDetectionCamera.py  genericYolo.py
VisionCore/web/: CameraApp.py
iSpy/: iSpy.py
iSpy/algorithms/: CustomDBScan.py
iSpy/boot/: boot.py  install.py  setup_service.py
iSpy/config/: iSpyConfig.py
iSpy/core/: game_loop.py
iSpy/dataset/: dataset.py
iSpy/examples/: example_config.json  example_usage.py
iSpy/plugins/: _loader.py  bases.py
iSpy/plugins/trackers/: ObjectTracker.py  PathPlanner.py  example_tracker.py
iSpy/plugins/utilities/: HealthReporter.py  NetworkHandler.py  VideoRecorder.py  example_utility.py
iSpy/utilities/: MultipleCameraHandler.py  VideoRecorder.py
iSpy/utilities/laptop/: AllInOneConvert.py
iSpy/validations/: benchmarking.py  ez.py  model_validator.py  unit_tests.py  validate_system.py
iSpy/vision/: Camera.py  ModelInspector.py  Object.py  ObjectDetectionCamera.py  genericYolo.py
iSpy/web/: CameraApp.py  Metrics.py  healthReporter.py
