[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visioncore-frc"
version = "2.6.11.23"
description = "FRC vision pipeline for custom, hardware accelerated object detection."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"

authors = [
    { name = "VisionCore Robotics Team", email = "aidanrjensen@gmail.com" }
]

maintainers = [
    { name = "VisionCore Maintainer", email = "aidanrjensen@gmail.com" }
]

dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "protobuf>=4.25.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "psutil>=7.2.0",
    "ruamel.yaml>=0.19.0",
    "Pillow>=12.0.0",
    "flask>=3.0",
    "scikit-learn>=1.3.0",
    "ultralytics>=8.3.0",
    "pyntcore>=2024.0.0",
    "robotpy>=2024.0.0"
]

[project.optional-dependencies]
dev = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tensorflow>=2.13.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.16.0",
    "onnxslim>=0.1.87",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "polars>=1.39.0",
    "plotly>=5.0",
    "snakeviz",
    "jupyter",
    "tensorboard",
]

metrics = [
    "plotly>=5.0"
]

[project.scripts]
visioncore-run  = "VisionCore.core.game_loop:main"
visioncore-boot = "VisionCore.boot.boot:on_boot"

[project.urls]
Homepage = "https://github.com/aidan-j532/VisionCore-Deploy"
Repository = "https://github.com/aidan-j532/VisionCore-Deploy"
Bug-Tracker = "https://github.com/aidan-j532/VisionCore-Deploy/issues"

[tool.setuptools.packages.find]
include = ["VisionCore", "VisionCore.*"]

[tool.setuptools.package-data]
"VisionCore" = ["assets/*"]